--- a/pt St. Philips/about.html
+++ b/pt St. Philips/about.html
@@ -80,13 +80,11 @@
 			</h2>
 
 				<article class="mission-top-sub">
-					<h3 class="mission-sub-border">SUMMER SCHEDULE:  10:00 A.M. ONE service only beginning July 1, 2018.</h3>
+					<h3 class="mission-sub-border">TWO SUNDAY SERVICES 9:00 A.M. AND 11:00 A.M. BEGINS OCTOBER 21, 2018.</h3>
 				</article>
 
 				<article class="mission-top-sub">
-					<p>Services below will resume in the fall:
-					<br>
-					<br>
+					<p>
 						Holy Eucharist Rite II
 					<br>
 					<br>
