--- a/pt St. Philips/celebration.html
+++ b/pt St. Philips/celebration.html
@@ -70,7 +70,7 @@
 			<article class="baptisim-content">
 				<p>Have a baptism coming up? <br> <br>
 				Baptism is the sacrament by which a person is joined to Christ and becomes a member of the Church. The Catechism of the Episcopal Book of Common Prayer elaborates that, “Holy Baptism is the sacrament by which God adopts us as his children and makes us members of Christ’s Body, the Church, and inheritors of the kingdom of God.”</p>
-					<button onclick="seemore()" id="myBtn" style="margin: 0;">see more</button>
+					<!-- <button onclick="seemore()" id="myBtn" style="margin: 0;">see more</button> -->
 
 					
 			</article>
@@ -114,7 +114,7 @@
 					<p>Have a confirmation coming up? <br> <br>
 						Confirmation and reaffirmation are rites that are meant to help one renew commitments made during baptisms or made on their behalf by parents or others at baptism in the Baptismal Covenant.
 					</p>
-						<button id="myBtn-2" onclick="seemore2()">see more</button>
+						<!-- <button id="myBtn-2" onclick="seemore2()">see more</button> -->
 				</article>
 
 				<div id="actual-c-button">
@@ -163,7 +163,7 @@
 					used. 
 				</p>
 
-					<button id="myBtn-3" onclick="seemore3()">see more</button>
+					<!-- <button id="myBtn-3" onclick="seemore3()">see more</button> -->
 			</article>
 
 			<div id="actual-c-button">
@@ -203,7 +203,7 @@
 					The Episcopal Church recognizes Holy Matrimony as a sacramental rite in which two people enter a lifelong union. They speak their vows before God and in the presence of the Church, receiving grace from God to help them fulfill the promises they have made. 
 				</p>
 
-					<button id="myBtn-4" onclick="seemore4()">see more</button>
+					<!-- <button id="myBtn-4" onclick="seemore4()">see more</button> -->
 			</article>
 
 			<div id="actual-c-button">
