--- a/pt St. Philips/index.html
+++ b/pt St. Philips/index.html
@@ -93,7 +93,7 @@
       <img id="caro-img" class="d-block w-100" src="./pics/compress/tree.jpg" alt="Fourth slide">
     </div>
     <div class="carousel-item">
-      <img id="caro-img" class="d-block w-100" src="./pics/compress/rector.jpg" alt="Fourth slide">
+      <img id="caro-img" class="d-block w-100" src="./pics/compress/newrec.jpg" alt="Fourth slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
