--- a/pt St. Philips/ministries.html
+++ b/pt St. Philips/ministries.html
@@ -74,6 +74,13 @@
 				<p>The Warriors of the Dream project is aimed at forming a healing and transformative community of youth in Harlem through dialogue, recreation, the arts and mentorship. All youth from elementary school to high school are welcome.</p>
 				<div style="clear: both;"></div>
 			</article>
+			<div class="col">
+		        <aside id="ministries-img-sec">
+					<div id="container">
+					<img src="./pics/warriors-thu.jpg" width="300" height="300" class="min-pic-wom pic-border">
+					</div>
+				</aside>
+    		</div>
     </div>
     
     <div class="col">
@@ -110,6 +117,11 @@
 				<p>Children five to eighteen years old are taught Christian theology based on <span>The Book of Common Prayer</span> and <span>The Bible.</span><br>
 					<div style="clear: both;"></div>
 			</article>
+			<aside id="ministries-img-sec">
+					<div id="container">
+					<img src="./pics/sundayschool.jpg" width="300" height="300" class="min-pic-wom pic-border">
+					</div>
+				</aside>
     </div>
   </div>
 </div>
@@ -125,6 +137,11 @@
 				<p>Fosters togetherness through worship, hospitality and fundraising for the betterment of the church and the community-at-large..</p>
 				<div style="clear: both;"></div>
 			</article>
+			<aside id="ministries-img-sec">
+					<div id="container">
+					<img src="./pics/womens.jpg" width="400" height="300" class="min-pic-wom pic-border">
+					</div>
+				</aside>
     </div>
 
   
