--- a/pt St. Philips/about.html
+++ b/pt St. Philips/about.html
@@ -96,7 +96,8 @@
 				</article>
 
 				<article class="mission-top-sub">
-					<p>Christian Formation will resume in September 2018.<!-- - classes for ages 3 through their high school years meet at 10:00 a.m. in the first floor classroom through June 24, 2018. -->
+					<p>Christian Formation has resumed!
+						<!-- - classes for ages 3 through their high school years meet at 10:00 a.m. in the first floor classroom through June 24, 2018. -->
 					<br>
 					<br>
 					</p>
