--- a/pt St. Philips/events.html
+++ b/pt St. Philips/events.html
@@ -382,6 +382,58 @@
 	  </div>
 	</div>
 
+
+	<div class="container new-event-container-first">
+	  <div class="row">
+	    <div class="col-sm">
+	      <h1 class="new-event-title">
+	      	Confirmation
+	      </h1>
+	      <!-- <a href="./pics/compress/harryt.JPG" data-lightbox="gallery" data-title="."><img src="./pics/harry.png" class="new-event-img"></a> -->
+	      <h3 class="new-event-title-sub">Have a confirmation coming up?</h3>
+	      <p class="new-event-sub">
+	      	<i>		<span class="new-span">
+					C 
+
+					</span>
+					onfirmation and reaffirmation are rites that are meant to help</i>
+					<br>
+					<br>
+					one renew commitments made during baptisms or made on their 
+					<br>
+					<br>
+					behalf by parents or others at baptism in the Baptismal Covenant.
+					</i>
+					
+					<div>
+					</div>
+	      </p>
+	    </div>
+	    <div class="col-sm">
+	      <h1 class="new-event-title">
+	      	Reaffirmation
+	      </h1>
+	      <!-- <img src="./pics/thurgood.jpg" class="new-event-img"> -->
+	      <h3 class="new-event-title-sub">Looking to renew your commitment?</h3>
+	      <p class="new-event-sub">
+	      	<i>		<span class="new-span">
+					R
+					</span>
+					eaffirmation is for those who have been baptized </i>
+					<br>
+					<br>
+					<i>and confirmed but who, for any number of reasons, want to intentionally </i>
+					<br>
+					<br>
+					<i>renew their commitment to living a Christian life through study and renewal </i>
+					<i>of the Baptismal Covenant vows once again. </i>
+					
+	      </p>
+	    </div>
+	  </div>
+	</div>
+
+
 	<div class="container new-event-container">
 	  <div class="row">
 	  	<div class="col-sm">
