--- a/pt St. Philips/about.html
+++ b/pt St. Philips/about.html
@@ -80,12 +80,12 @@
 			</h2>
 
 				<article class="mission-top-sub">
-					<h3 class="mission-sub-border">TWO SUNDAY SERVICES 9:00 A.M. AND 11:00 A.M. BEGINS OCTOBER 21, 2018.</h3>
+					<h3 class="mission-sub-border">TWO SUNDAY SERVICES 9:00 A.M. AND 11:00 A.M.</h3>
 				</article>
 
 				<article class="mission-top-sub">
 					<p>
-						Holy Eucharist Rite II
+					9:00 a.m. Holy Eucharist Rite II
 					<br>
 					<br>
 					 11:00 a.m.  first, second and fourth Sundays - Sung Eucharist 
