--- a/pt St. Philips/index.html
+++ b/pt St. Philips/index.html
@@ -65,35 +65,31 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img id="caro-img" class="d-block w-100" src="./pics/compress/Stainglass Motto1.jpg" alt="First slide">
+      <img id="caro-img" class="d-block w-100" src="./pics/compress/newrec.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img id="caro-img" class="d-block h-100 w-100" src="./pics/compress/Landmark Plaque1.jpg" alt="Second slide">
+      <img id="caro-img" class="d-block h-100 w-100" src="./pics/compress/choir2.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img id="caro-img" class="d-block w-100" src="./pics/compress/Altar1.jpg" alt="Third slide">
+      <img id="caro-img" class="d-block w-100" src="./pics/compress/blessings.jpg" alt="Third slide">
     </div>
     <div class="carousel-item">
-      <img id="caro-img" class="d-block w-100" src="./pics/compress/bells.jpg" alt="Fourth slide">
+      <img id="caro-img" class="d-block w-100" src="./pics/compress/new slide 1.jpg" alt="Fourth slide">
     </div>
     <div class="carousel-item">
-      <img id="caro-img" class="d-block w-100" src="./pics/compress/choir2.jpg" alt="Fourth slide">
+      <img id="caro-img" class="d-block w-100" src="./pics/compress/new slide 2.jpg" alt="Fourth slide">
     </div>
     <div class="carousel-item">
-      <img id="caro-img" class="d-block w-100" src="./pics/compress/plaque.jpg" alt="Fourth slide">
+      <img id="caro-img" class="d-block w-100" src="./pics/compress/new slide 3.jpg" alt="Fourth slide">
     </div>
     <div class="carousel-item">
-      <img id="caro-img" class="d-block w-100" src="./pics/compress/interior.jpg" alt="Fourth slide">
+      <img id="caro-img" class="d-block w-100" src="./pics/compress/new slide 4.jpg" alt="Fourth slide">
     </div>
     <div class="carousel-item">
-      <img id="caro-img" class="d-block w-100" src="./pics/compress/tree.jpg" alt="Fourth slide">
-    </div>
-    <div class="carousel-item">
-      <img id="caro-img" class="d-block w-100" src="./pics/compress/newrec.jpg" alt="Fourth slide">
+      <img id="caro-img" class="d-block w-100" src="./pics/compress/Stainglass Motto1.jpg" alt="Fourth slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
