--- a/pt St. Philips/about.html
+++ b/pt St. Philips/about.html
@@ -380,7 +380,7 @@
 			<h2 class="staff-name">Rev. Canon Terence Alexander Lee</h2>
 			<img class="staff-img-pg" src="./staff/new1.png" 
 			onclick="desc0()" style="cursor: pointer;">
-			<h2 class="staff-sub">Rector</h2>
+			<h2 class="staff-sub">Rector-Elect</h2>
 		</div>
     </div>
     
