--- a/pt St. Philips/events.html
+++ b/pt St. Philips/events.html
@@ -315,7 +315,7 @@
 	  <div class="row">
 	  	<div class="col-sm">
 	      <h1 class="new-event-title">
-	      	<a href="./pics/compress/homecoming.JPG" data-lightbox="gallery2" data-title="." style="text-decoration: none; color: #BA2026">Confirmation and Reaffirmation Sunday</a>
+	      	Confirmation and Reaffirmation Sunday
 	      </h1>
 	      
 	      <h3 class="new-event-title-sub">
@@ -339,6 +339,10 @@
 					<br>
 					<i>Baptism, Confirmation and Reaffirmation Sunday</i>
 					<br>
+
+					<div style="border-style: groove; width: 378px; text-align: center; margin: auto;">
+					<a href="./pics/compress/homecoming.JPG" data-lightbox="gallery2" data-title="." style="text-decoration: none; color: #BA2026;">see more</a>
+					</div>
 	      </p>
 	    </div>
 	  
