--- a/pt St. Philips/events.html
+++ b/pt St. Philips/events.html
@@ -52,47 +52,8 @@
 	</header>
 <!-- Navigation End -->
 
-<!-- Content Start -->
-<!-- <section id="boxes">
-			<div class="container">
-				<div class="box">
-					<h2>Law Day</h2>
-					<a href="events-list-law-day.html"><img src="./pics/thurgood.jpg"></a>
-					<p><i><span>
-					T</span>
-					hurgood Marshall Law Day 2018</i>
-					<br>
-					<br>
-					<i>An Evensong Conversation</i>
-					<br>
-					<br>
-					<i>St. Philip's Church</i>
-					<i>2-4 West 134th Street, Net York, New York 10030</i>
-					<br>
-					<br>
-					<i>Saturday, May 12th at 4:00 p.m.</i>
-					<br>
-					<br>
-					<i>Featuring Darcel Clark, 13th District Attorney for Bronx
-					County</i>
-					</p>
-				</div>
-	
-				<div class="box">
-					<h2>Dance of the Village Elders</h2>
-					<a href="events-list-garvey.html"></a>
-					<p><i><span>N</span>inety minute free fitness classes for seniors on Thursdays @2 p.m.</i> 
-					<br>
-					<br>
-					Dates for St. Philips are every third Sunday of the month.  
-					<br>
-					<br>
-					Prior to the day, parishioners are asked to contribute lunch items - cold cuts/bread/individual packaged drinks/condiments.</p>
-					</i>
-				</div>
-			</div>
-</section> -->
 
+<!-- CURRENT EVENTS -->
 	<div class="container new-event-container-last">
 	  <div class="row">
 	  	<div class="col-sm">
