--- a/pt St. Philips/events.html
+++ b/pt St. Philips/events.html
@@ -55,6 +55,8 @@
 
 <!-- CURRENT EVENTS -->
 	<div class="container new-event-container-last">
+		<h2 class="mission-header banner-red">Current Events</h2>
+		<br>
 	  <div class="row">
 	  	<div class="col-sm">
 	      <h1 class="new-event-title-c">
@@ -200,6 +202,8 @@
 	
 
 <div class="container new-event-container-last">
+	<h2 class="mission-header banner-beige">Ongoing Events</h2>
+	<br>
 	  <div class="row">	  	
 	  	<div class="col-sm">
 	    	<h1 class="new-event-title-t">
@@ -288,8 +292,12 @@
 <!-- NOV 4 - 11 -->
 
 
+
+
 <!-- OCT 14 - 24 -->
 <div class="container new-event-container-first">
+	<h2 class="mission-header banner-grey">Past Events</h2>
+	<br>
 	  <div class="row">
 	  	<div class="col-sm">
 	      <h1 class="new-event-title">
