--- a/pt St. Philips/events.html
+++ b/pt St. Philips/events.html
@@ -286,6 +286,27 @@
 	  </div>
 	</div>
 
+	<div class="container new-event-container-last">
+	  <div class="row">
+	    <div class="col-sm">
+	      <a href="./pics/compress/museum.JPG" data-lightbox="museum" data-title="."><h1 class="new-event-title-t">
+	      	St. Philips Featured in Museum Exhibit </h1></a>
+	      <h3 class="new-event-title-sub-t">New York Historical Society Museum & Library </h3>
+	      <p class="new-event-sub-t">
+	      	<i>		<span class="new-span-t">
+					B
+					</span>
+					 lack Citizenship in the Age of Jim Crow</i> 
+					<br>
+					<br>
+					September 7, 2018 to March 3, 2019  
+					<br>
+					<br>
+	      </p>
+	    </div>
+	  </div>
+	</div>
+
 
 <!-- NOV 4 - 11 -->
 <!-- NOV 4 - 11 -->
