--- a/pt St. Philips/events.html
+++ b/pt St. Philips/events.html
@@ -289,7 +289,7 @@
 	<div class="container new-event-container-last">
 	  <div class="row">
 	    <div class="col-sm">
-	      <a href="./pics/compress/museum.JPG" data-lightbox="museum" data-title="."><h1 class="new-event-title-t">
+	      <h1 class="new-event-title-t">
 	      	St. Philips Featured in Museum Exhibit </h1></a>
 	      <h3 class="new-event-title-sub-t">New York Historical Society Museum & Library </h3>
 	      <p class="new-event-sub-t">
@@ -302,6 +302,9 @@
 					September 7, 2018 to March 3, 2019  
 					<br>
 					<br>
+			<div style="border-style: groove; width: 378px; text-align: center; margin: auto;">
+				<a href="./pics/compress/museum.JPG" data-lightbox="museum" data-title="." style="text-decoration: none; color: #BA2026;">see more</a>
+			</div>
 	      </p>
 	    </div>
 	  </div>
